@@ -60,13 +60,24 @@ module.exports = Dropbox;
   }
 
   this.writeFile_p = function(path, text, revision, client){
-    return this.getRevision_p(path, client)
+    var revCheck_p;
+    
+    if (!revision) {
+      revCheck_p = Q(0);
+    }
+    else{
+      revCheck_p = this.getRevision_p(path, client);
+    }
+
+
+    return revCheck_p
     .then(function(rev){
       var deferred = Q.defer();
 
       //TODO: Can't you specify the revision on write rather than async?
       if (rev > revision){
         deferred.reject(new Error("Someone has modified this file since you last opened it."));
+        return;
       }
       client.writeFile(path, text, function(error, stat) {
         if (error) {
@@ -82,13 +93,17 @@ module.exports = Dropbox;
     });
   }
 
-  this.fetchRemoteList_p = function(req, client){
+  this.fetchRemoteList_p = function(req, client, path){
+    if (!path){
+      path = req.user.path;
+    }
+
     if (!client){
       client = new DropboxJS.Client({token: req.user.accessToken});
     }
     var deferred = Q.defer();
     logger.trace("Requesting remote file from Dropbox");
-    client.readFile(req.user.path, function(error, file, data) {
+    client.readFile(path, function(error, file, data) {
       if (error) {
         return deferred.reject(error);         
       }
@@ -292,12 +307,73 @@ module.exports = Dropbox;
         res.redirect('/');
       });
 
+    app.post('/archive', function(req, res, next){
+      logger.trace("Archiving dones");
+        
+      var client = new DropboxJS.Client({token: req.user.accessToken});  
+      
+      self.getList_p(req, client)
+      .then(function(list){
+        var lines = list.text.split('\n');
+
+        var dones = [];
+        var newLines = [];
+
+        _.each(lines, function(line, i){
+          if (line.match(/^[xX]\s/)){
+            dones.push(line);
+          } else {
+            newLines.push(line);
+          }
+        });
+
+        newLines = newLines.join('\n');
+
+        // Get done.txt
+        var donePath = path.dirname(req.user.path) + '/done.txt';
+        self.fetchRemoteList_p(req, client, donePath)
+        .fail(function(err){
+           if (err.toString().match(/File not found/i)){
+            return {text: "", revision: 0};
+           } else {
+             throw err;
+           }
+        })
+        .then(function(don){
+          if (!don || typeof don.text === 'undefined') {
+            throw new Error("Invalid done.txt value: " + sav);
+          }
+          if (don.text !== '' && !don.text.match(/\n$/)){
+            don.text = don.text + '\n';
+          }
+          
+          self.writeFile_p(req.user.path, newLines, req.body.revision, client)
+          .then(function(sav){
+            self.writeFile_p(donePath, don.text + dones.join('\n'), don.revision, client)
+            .then(function(){
+              res.send(200, {text: newLines, revision : sav.revision});            
+            })
+            .fail(function(err){
+              logger.warn(err);
+              res.send(500);
+            });
+
+          }, function(err){
+            logger.warn(err);
+            res.send(500);
+          });
+        })
+        .fail(function(err){
+          logger.warn(err);
+          res.send(500);
+        });
+      })
+      .fail(function(err){
+        logger.warn(err);
+        res.send(500);
+      });
+    });
+
   }
 }).call(Dropbox.prototype);
 
-
-
-
-
-
-  
